ImpexAST/src/test/resources/errors/parser-lines-with-chars.impex
#
# invalid xxx yyy
# 
$regulargroup=regulargroup
$customergroup=customergroup
xxx
# Create Customer Group
INSERT_UPDATE Usergroup;uid[unique=true];groups(uid)[mode=append]
;$regulargroup;customergroup
yyy
;othergroup;lastgroup